Issue #402 treaties section is hidden on mobile

--- a/docroot/sites/all/themes/informea.theme/css/style-from-less.css
+++ b/docroot/sites/all/themes/informea.theme/css/style-from-less.css
@@ -475,6 +475,11 @@ body {
   padding-bottom: 20px;
   padding-top: 20px;
 }
+@media (max-width: 767px) {
+  .footer-section--treaties {
+    display: none;
+  }
+}
 @media (min-width: 768px) {
   .footer-section--info > .container {
     display: -webkit-box;
