--- a/docroot/sites/all/themes/informea.theme/less/overrides/footer.less
+++ b/docroot/sites/all/themes/informea.theme/less/overrides/footer.less
@@ -17,6 +17,9 @@
       border-bottom: none;
       padding-bottom: 20px;
       padding-top: 20px;
+      @media (max-width: @screen-xs-max) {
+        display: none;
+      }
     }
 
     &--info {
